--- a/rebar.config
+++ b/rebar.config
@@ -2,3 +2,10 @@
 {deps, [
   {oauth2, "0.6.*", {git, "git://github.com/kivra/oauth2", "HEAD"}}
 ]}.
+{profiles, [
+  {test, [
+    {deps, [
+      {meck, {git, "https://github.com/eproxus/meck.git", {tag, "0.8.3"}}}
+    ]}
+  ]}
+]}.
