global: rebar coverate enabling
Signed-off-by: Leonardo Rossi <leonardo.rossi@studenti.unipr.it>

--- a/rebar.config
+++ b/rebar.config
@@ -2,6 +2,7 @@
 {deps, [
   {oauth2, "0.6.*", {git, "git://github.com/kivra/oauth2", "HEAD"}}
 ]}.
+{cover_enabled, true}.
 {profiles, [
   {test, [
     {deps, [
