installation: mongopool dependency addition
Signed-off-by: Leonardo Rossi <leonardo.rossi@studenti.unipr.it>

--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,7 @@
 {erl_opts, [debug_info]}.
 {deps, [
-  {oauth2, "0.6.*", {git, "git://github.com/kivra/oauth2", "HEAD"}}
+  {oauth2, "0.6.*", {git, "git://github.com/kivra/oauth2", "HEAD"}},
+  {mongopool, ".*", {git, "https://github.com/hachreak/mongopool.git"}}
 ]}.
 {cover_enabled, true}.
 {profiles, [
