rebar: remove rebar2 compatibility
Signed-off-by: Leonardo Rossi <leonardo.rossi@studenti.unipr.it>

--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,8 @@
 {erl_opts, [debug_info]}.
 {deps, [
-  {oauth2, "0.6.*", {git, "git://github.com/kivra/oauth2", "HEAD"}},
-  {mongopool, ".*", {git, "https://github.com/hachreak/mongopool.git"}}
+  {oauth2, {git, "git://github.com/kivra/oauth2", {branch, master}}},
+  {mongopool,
+   {git, "https://github.com/hachreak/mongopool.git", {branch, master}}}
 ]}.
 {cover_enabled, true}.
 {profiles, [
