--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,5 @@ language: erlang
 otp_release:
   - 18.0
   - 18.1
-before_script:
-    - sleep 15
-script: "./utils/rebar3 eunit"
+  - 18.2
+script: "./run-tests.sh"
