--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 app:
   build: .
-  command: /var/www/utils/rebar3 shell
+  command: /var/www/run-tests.sh
   volumes:
     - .:/var/www:rw
   links:
@@ -9,4 +9,4 @@ mongo:
   image: mongo:3.0.4
   ports:
     - "27017:27017"
-  command: --smallfiles --rest
+  command: --smallfiles --rest --dbpath /data/db
