installation: confirmator, pushmail dep removal
Signed-off-by: Leonardo Rossi <leonardo.rossi@studenti.unipr.it>

--- a/rebar.config
+++ b/rebar.config
@@ -2,12 +2,7 @@
 {deps, [
   {oauth2, {git, "git://github.com/kivra/oauth2", {branch, master}}},
   {mongopool,
-   {git, "https://github.com/hachreak/mongopool.git", {branch, master}}},
-  {confirmator_mongopool,
-   {git, "https://github.com/hachreak/confirmator_mongopool.git",
-    {branch, master}}},
-  {pushmail,
-    {git, "https://github.com/hachreak/pushmail.git", {branch, master}}}
+   {git, "https://github.com/hachreak/mongopool.git", {branch, master}}}
 ]}.
 {cover_enabled, true}.
 {profiles, [
