--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,10 @@
 {erl_opts, [debug_info]}.
+{plugins, [
+  {rebar3_lint,
+   {git, "https://github.com/project-fifo/rebar3_lint.git",
+    {tag, "0.1.4"}}
+  }
+]}.
 {deps, [
   {oauth2, {git, "git://github.com/kivra/oauth2", {branch, master}}},
   {mongopool,
