--- a/rebar.config
+++ b/rebar.config
@@ -6,7 +6,7 @@
   }
 ]}.
 {deps, [
-  {oauth2, {git, "git://github.com/kivra/oauth2", {branch, master}}},
+  {oauth2, {git, "https://github.com/kivra/oauth2.git", {branch, master}}},
   {mongopool,
    {git, "https://github.com/hachreak/mongopool.git", {branch, master}}}
 ]}.
