installation: oauth2_scope_strategies dep addition
Signed-off-by: Leonardo Rossi <leonardo.rossi@studenti.unipr.it>

--- a/rebar.config
+++ b/rebar.config
@@ -7,6 +7,9 @@
 ]}.
 {deps, [
   {oauth2, {git, "https://github.com/kivra/oauth2.git", {branch, master}}},
+  {oauth2_scope_strategies,
+   {git, "https://github.com/hachreak/oauth2_scope_strategies.git",
+    {branch, master}}},
   {mongopool,
    {git, "https://github.com/hachreak/mongopool.git", {branch, master}}}
 ]}.
