--- a/rebar.config
+++ b/rebar.config
@@ -1,10 +1,5 @@
 {erl_opts, [debug_info]}.
-{plugins, [
-  {rebar3_lint,
-   {git, "https://github.com/project-fifo/rebar3_lint.git",
-    {tag, "0.1.4"}}
-  }
-]}.
+{plugins, []}.
 {deps, [
   {oauth2, {git, "https://github.com/kivra/oauth2.git", {branch, master}}},
   {oauth2_scope_strategies,
