installation: hachreak/oauth2@auth_token
Signed-off-by: Leonardo Rossi <leonardo.rossi@studenti.unipr.it>

--- a/rebar.config
+++ b/rebar.config
@@ -1,12 +1,13 @@
 {erl_opts, [debug_info]}.
 {plugins, []}.
 {deps, [
-  {oauth2, {git, "https://github.com/kivra/oauth2.git", {branch, master}}},
+  {oauth2,
+    {git, "https://github.com/hachreak/oauth2.git", {branch, auth_token}}},
   {oauth2_scope_strategies,
-   {git, "https://github.com/hachreak/oauth2_scope_strategies.git",
-    {branch, master}}},
+    {git, "https://github.com/hachreak/oauth2_scope_strategies.git",
+      {branch, master}}},
   {mongopool,
-   {git, "https://github.com/hachreak/mongopool.git", {branch, master}}}
+    {git, "https://github.com/hachreak/mongopool.git", {branch, master}}}
 ]}.
 {cover_enabled, true}.
 {profiles, [
