installation: oauth2@esenshub_branch branch
Signed-off-by: Leonardo Rossi <leonardo.rossi@studenti.unipr.it>

--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,8 @@
 {plugins, []}.
 {deps, [
   {oauth2,
-    {git, "https://github.com/hachreak/oauth2.git", {branch, auth_token}}},
+    {git, "https://github.com/hachreak/oauth2.git",
+      {branch, esenshub_branch}}},
   {oauth2_scope_strategies,
     {git, "https://github.com/hachreak/oauth2_scope_strategies.git",
       {branch, master}}},
